builds/tests/343/data/attachments/6d8336161e638e42.txt
2026-06-18 09:32:52,747 INFO     yoyo.migrations — Applying 0001_initial_schema
2026-06-18 09:32:52,748 INFO     yoyo.migrations —  - applying step 0
2026-06-18 09:32:52,748 INFO     yoyo.migrations —  - applying step 1
2026-06-18 09:32:52,748 INFO     yoyo.migrations —  - applying step 2
2026-06-18 09:32:52,748 INFO     yoyo.migrations —  - applying step 3
2026-06-18 09:32:52,749 INFO     yoyo.migrations —  - applying step 4
2026-06-18 09:32:52,749 INFO     yoyo.migrations —  - applying step 5
2026-06-18 09:32:52,749 INFO     yoyo.migrations —  - applying step 6
2026-06-18 09:32:52,749 INFO     yoyo.migrations —  - applying step 7
2026-06-18 09:32:52,749 INFO     yoyo.migrations —  - applying step 8
2026-06-18 09:32:52,750 INFO     yoyo.migrations —  - applying step 9
2026-06-18 09:32:52,750 INFO     yoyo.migrations —  - applying step 10
2026-06-18 09:32:52,750 INFO     yoyo.migrations —  - applying step 11
2026-06-18 09:32:52,750 INFO     yoyo.migrations —  - applying step 12
2026-06-18 09:32:52,750 INFO     yoyo.migrations —  - applying step 13
2026-06-18 09:32:52,751 INFO     yoyo.migrations —  - applying step 14
2026-06-18 09:32:52,752 INFO     yoyo.migrations — Marking 0001_initial_schema applied
2026-06-18 09:32:52,753 INFO     yoyo.migrations — Applying 0002_exchange_rates_source_target
2026-06-18 09:32:52,753 INFO     yoyo.migrations —  - applying step 0
2026-06-18 09:32:52,754 INFO     yoyo.migrations —  - applying step 1
2026-06-18 09:32:52,755 INFO     yoyo.migrations — Marking 0002_exchange_rates_source_target applied
2026-06-18 09:32:52,755 INFO     yoyo.migrations — Applying 0003_app_currencies
2026-06-18 09:32:52,756 INFO     yoyo.migrations —  - applying step 0
2026-06-18 09:32:52,757 INFO     yoyo.migrations — Marking 0003_app_currencies applied
2026-06-18 09:32:52,758 INFO     yoyo.migrations — Applying 0004_receipt_pipeline
2026-06-18 09:32:52,758 INFO     yoyo.migrations —  - applying step 0
2026-06-18 09:32:52,758 INFO     yoyo.migrations —  - applying step 1
2026-06-18 09:32:52,758 INFO     yoyo.migrations —  - applying step 2
2026-06-18 09:32:52,759 INFO     yoyo.migrations —  - applying step 3
2026-06-18 09:32:52,759 INFO     yoyo.migrations —  - applying step 4
2026-06-18 09:32:52,759 INFO     yoyo.migrations —  - applying step 5
2026-06-18 09:32:52,759 INFO     yoyo.migrations —  - applying step 6
2026-06-18 09:32:52,760 INFO     yoyo.migrations —  - applying step 7
2026-06-18 09:32:52,760 INFO     yoyo.migrations —  - applying step 8
2026-06-18 09:32:52,760 INFO     yoyo.migrations —  - applying step 9
2026-06-18 09:32:52,761 INFO     yoyo.migrations —  - applying step 10
2026-06-18 09:32:52,761 INFO     yoyo.migrations —  - applying step 11
2026-06-18 09:32:52,761 INFO     yoyo.migrations —  - applying step 12
2026-06-18 09:32:52,761 INFO     yoyo.migrations —  - applying step 13
2026-06-18 09:32:52,761 INFO     yoyo.migrations —  - applying step 14
2026-06-18 09:32:52,762 INFO     yoyo.migrations —  - applying step 15
2026-06-18 09:32:52,762 INFO     yoyo.migrations —  - applying step 16
2026-06-18 09:32:52,763 INFO     yoyo.migrations —  - applying step 17
2026-06-18 09:32:52,763 INFO     yoyo.migrations —  - applying step 18
2026-06-18 09:32:52,763 INFO     yoyo.migrations —  - applying step 19
2026-06-18 09:32:52,763 INFO     yoyo.migrations —  - applying step 20
2026-06-18 09:32:52,763 INFO     yoyo.migrations —  - applying step 21
2026-06-18 09:32:52,764 INFO     yoyo.migrations —  - applying step 22
2026-06-18 09:32:52,765 INFO     yoyo.migrations — Marking 0004_receipt_pipeline applied
2026-06-18 09:32:52,766 INFO     yoyo.migrations — Applying 0005_income_logging
2026-06-18 09:32:52,766 INFO     yoyo.migrations —  - applying step 0
2026-06-18 09:32:52,767 INFO     yoyo.migrations —  - applying step 1
2026-06-18 09:32:52,767 INFO     yoyo.migrations —  - applying step 2
2026-06-18 09:32:52,767 INFO     yoyo.migrations —  - applying step 3
2026-06-18 09:32:52,768 INFO     yoyo.migrations —  - applying step 4
2026-06-18 09:32:52,768 INFO     yoyo.migrations —  - applying step 5
2026-06-18 09:32:52,768 INFO     yoyo.migrations —  - applying step 6
2026-06-18 09:32:52,769 INFO     yoyo.migrations —  - applying step 7
2026-06-18 09:32:52,769 INFO     yoyo.migrations —  - applying step 8
2026-06-18 09:32:52,769 INFO     yoyo.migrations —  - applying step 9
2026-06-18 09:32:52,769 INFO     yoyo.migrations —  - applying step 10
2026-06-18 09:32:52,769 INFO     yoyo.migrations —  - applying step 11
2026-06-18 09:32:52,769 INFO     yoyo.migrations —  - applying step 12
2026-06-18 09:32:52,770 INFO     yoyo.migrations —  - applying step 13
2026-06-18 09:32:52,770 INFO     yoyo.migrations —  - applying step 14
2026-06-18 09:32:52,770 INFO     yoyo.migrations —  - applying step 15
2026-06-18 09:32:52,770 INFO     yoyo.migrations —  - applying step 16
2026-06-18 09:32:52,770 INFO     yoyo.migrations —  - applying step 17
2026-06-18 09:32:52,770 INFO     yoyo.migrations —  - applying step 18
2026-06-18 09:32:52,770 INFO     yoyo.migrations —  - applying step 19
2026-06-18 09:32:52,771 INFO     yoyo.migrations —  - applying step 20
2026-06-18 09:32:52,771 INFO     yoyo.migrations —  - applying step 21
2026-06-18 09:32:52,771 INFO     yoyo.migrations —  - applying step 22
2026-06-18 09:32:52,771 INFO     yoyo.migrations —  - applying step 23
2026-06-18 09:32:52,771 INFO     yoyo.migrations —  - applying step 24
2026-06-18 09:32:52,771 INFO     yoyo.migrations —  - applying step 25
2026-06-18 09:32:52,771 INFO     yoyo.migrations —  - applying step 26
2026-06-18 09:32:52,772 INFO     yoyo.migrations —  - applying step 27
2026-06-18 09:32:52,772 INFO     yoyo.migrations —  - applying step 28
2026-06-18 09:32:52,772 INFO     yoyo.migrations —  - applying step 29
2026-06-18 09:32:52,772 INFO     yoyo.migrations —  - applying step 30
2026-06-18 09:32:52,772 INFO     yoyo.migrations —  - applying step 31
2026-06-18 09:32:52,772 INFO     yoyo.migrations —  - applying step 32
2026-06-18 09:32:52,773 INFO     yoyo.migrations —  - applying step 33
2026-06-18 09:32:52,773 INFO     yoyo.migrations —  - applying step 34
2026-06-18 09:32:52,775 INFO     yoyo.migrations —  - applying step 35
2026-06-18 09:32:52,775 INFO     yoyo.migrations —  - applying step 36
2026-06-18 09:32:52,776 INFO     yoyo.migrations —  - applying step 37
2026-06-18 09:32:52,776 INFO     yoyo.migrations —  - applying step 38
2026-06-18 09:32:52,777 INFO     yoyo.migrations —  - applying step 39
2026-06-18 09:32:52,778 INFO     yoyo.migrations —  - applying step 40
2026-06-18 09:32:52,780 INFO     yoyo.migrations — Marking 0005_income_logging applied
2026-06-18 09:32:52,781 INFO     yoyo.migrations — Applying 0006_category_templates
2026-06-18 09:32:52,782 INFO     yoyo.migrations —  - applying step 0
2026-06-18 09:32:52,785 INFO     yoyo.migrations — Marking 0006_category_templates applied
2026-06-18 09:32:52,791 INFO     dinary.background.classification.task — Receipt drain: processing receipt_id=1
2026-06-18 09:32:52,793 ERROR    dinary.background.classification.task — Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 246, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.14/x64/lib/python3.13/asyncio/threads.py", line 26, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.14/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 540, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error
